Fixed blank space error in test cases

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
@@ -93,7 +93,7 @@
                             <div class="collapsible-body">
                                 <div class="form-group">
                                     <label>Test Case Title</label>
-                                    <input type="text" [(ngModel)]="testCase.testCaseTitle" class="form-control width-percent-60" required name="title_{{testCase.id}}" #title="ngModel" />
+                                    <input type="text" [(ngModel)]="testCase.testCaseTitle" class="form-control width-percent-60" (focusout)="testCase.testCaseTitle = trimString(testCase.testCaseTitle)" required name="title_{{testCase.id}}" #title="ngModel" />
                                     <div class="errors-container">
                                         <div *ngIf="title.errors && (title.dirty || title.touched)">
                                             <p class="error-msg">Test Case Title is required</p>
@@ -102,7 +102,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label>Test Case Description</label>
-                                    <textarea [(ngModel)]="testCase.testCaseDescription" class="form-control width-percent-60" rows="3" required name="description_{{testCase.id}}" #description="ngModel"></textarea>
+                                    <textarea [(ngModel)]="testCase.testCaseDescription" class="form-control width-percent-60" rows="3" (focusout)="testCase.testCaseDescription = trimString(testCase.testCaseDescription)" required name="description_{{testCase.id}}" #description="ngModel"></textarea>
                                     <div class="errors-container">
                                         <div *ngIf="description.errors && (description.dirty || description.touched)">
                                             <p class="error-msg">Test Case Description is required</p>
@@ -135,7 +135,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label>Test Case Input Values</label>
-                                    <textarea [(ngModel)]="testCase.testCaseInput" class="form-control width-percent-60" rows="3" required name="input_{{testCase.id}}" #input="ngModel"></textarea>
+                                    <textarea [(ngModel)]="testCase.testCaseInput" class="form-control width-percent-60" rows="3" (focusout)="testCase.testCaseInput = trimString(testCase.testCaseInput)" required name="input_{{testCase.id}}" #input="ngModel"></textarea>
                                     <div class="errors-container">
                                         <div *ngIf="input.errors && (input.dirty || input.touched)">
                                             <p class="error-msg">Test Case Input is required</p>
@@ -144,7 +144,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label>Test Case Expected Values</label>
-                                    <textarea [(ngModel)]="testCase.testCaseOutput" class="form-control width-percent-60" rows="3" required name="output_{{testCase.id}}" #output="ngModel"></textarea>
+                                    <textarea [(ngModel)]="testCase.testCaseOutput" class="form-control width-percent-60" rows="3" (focusout)="testCase.testCaseOutput = trimString(testCase.testCaseOutput)" required name="output_{{testCase.id}}" #output="ngModel"></textarea>
                                     <div class="errors-container">
                                         <div *ngIf="output.errors && (output.dirty || output.touched)">
                                             <p class="error-msg">Test Case Output is required</p>
