--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/register/register.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/register/register.html
@@ -42,9 +42,9 @@
             </div>
             <div class="form-group">
                 <label>Contact Number</label>
-                <input required pattern="^[+]?([0-9]{10,15})$" type="text" class="form-control" [(ngModel)]="testAttendees.contactNumber" name="contactNumber" #contactNumber="ngModel" maxlength="15" />
+                <input required pattern="^[+]?([0-9]{0,15})$" type="text" class="form-control" [(ngModel)]="testAttendees.contactNumber" name="contactNumber" #contactNumber="ngModel" maxlength="15" />
                 <div class="errors-container">
-                    <span *ngIf="contactNumber.dirty && !contactNumber.valid && contactNumber.errors.pattern" class="error-msg">Phone number must have atleast 10 digits with an optional country code</span>
+                    <span *ngIf="contactNumber.dirty && !contactNumber.valid && contactNumber.errors.pattern" class="error-msg">This field should contain numeric values only.</span>
                     <span *ngIf="contactNumber.touched && !contactNumber.valid && contactNumber.errors.required" class="error-msg">Required</span>
                 </div>
             </div>
