--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/test.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/test.html
@@ -68,11 +68,11 @@
                     </div>
                     <div class="display-table-cell ans-area ptb20 pl15" *ngIf="isQuestionSingleChoice && !isQuestionCodeSnippetType">
                         <md-radio-group>
-                            <md-radio-button *ngFor="let option of options;let i = index" [disabled]="questionStatus == 0" value="{{option.id}}" name="option.option_{{i}}" (change)="selectOption(questionIndex,i,true)" [checked]="option.isAnswer">{{option.option}}</md-radio-button>
+                            <md-radio-button *ngFor="let option of options;let i = index" value="{{option.id}}" name="option.option_{{i}}" (change)="selectOption(questionIndex,i,true)" [checked]="option.isAnswer">{{option.option}}</md-radio-button>
                         </md-radio-group>
                     </div>
                     <div class="display-table-cell ans-area ptb20 pl15" *ngIf="!isQuestionSingleChoice && !isQuestionCodeSnippetType">
-                        <md-checkbox *ngFor="let option of options; let i = index" [disabled]="questionStatus == 0" (change)="selectOption(questionIndex,i)" [checked]="option.isAnswer">
+                        <md-checkbox *ngFor="let option of options; let i = index" (change)="selectOption(questionIndex,i)" [checked]="option.isAnswer">
                             {{option.option}}
                         </md-checkbox>
                         <p class="theme-text h7">Note: This question can have more than one answer.</p>
