--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test-summary/test-summary.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test-summary/test-summary.html
@@ -27,9 +27,19 @@
         </div>
         <div class="text-center" *ngIf="isTestClosedUnConditionally">
             <h5 class="ptb20">Test once ended, cannot be resumed. Are you sure, you want to end your test?</h5>
-            <button class="btn" *ngIf="!isTestResume" [disabled]="disableButton" (click)="sendRequestForResume()">Request to Resume</button>
-            <button type="button" class="btn" *ngIf="isTestResume" (click)="startTest()">Back to Test</button>
+            <button class="btn" *ngIf="!isAllowed" [disabled]="disableButton && !isAllowed" (click)="sendRequestForResume()">Request to Resume</button>
+            <button type="button" class="btn" *ngIf="isAllowed" (click)="startTest()">Back to Test</button>
             <button type="button" class="btn btn-primary" (click)="endYourTest()">End Test</button>
+        </div>
+        <div class="text-center mt20" *ngIf="isTestClosedUnConditionally && !isTestResume && !isAllowed">
+            <div class="errors-container">
+                <span class="error-msg">Please contact the supervisor if you want to resume the test.</span>
+            </div>
+        </div>
+        <div class="text-center mt20" *ngIf="isTestClosedUnConditionally && isTestResume">
+            <div class="errors-container">
+                <span class="error-msg">Please refresh this page after the supervisor's instructions.</span>
+            </div>
         </div>
     </div>
     <test-conduct-footer></test-conduct-footer>
